--- a/order/templates/order/checkout.html
+++ b/order/templates/order/checkout.html
@@ -91,7 +91,7 @@
                     <hr>
                     <div class="float-right">
                         <h5>Items: <strong>{{ order.cart.total_products }}</strong></h5>
-                        <h5>Total: <strong>{{ order.cart.total_amount }}</strong></h5>
+                        <h5>Total: ₦ <strong>{{ order.cart.total_amount }}</strong></h5>
                     </div>
                 </div>
             </div>
