--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -124,6 +124,11 @@
                         <ul>
                             <li><a href="{% url 'about' %}">About Us</a></li>
                             <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                            {% if not user.is_authenticated %}
+                                <li>
+                                    <a href="{% url 'login' %}">Login</a>
+                                </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
