--- a/store/templates/store/accessories.html
+++ b/store/templates/store/accessories.html
@@ -11,7 +11,7 @@
 						<div class="col-lg-3 col-sm-6 mb-3">
 							<img src="{{ object.image.url }}" width="100%">
 							<h6 class="text-uppercase font-weight-bold mt-3">{{ object.title }}</h6>
-							<p>Price: ${{ object.price }}</p>
+							<p>Price: ₦{{ object.price }}</p>
 							<a href="{% url 'product_details' object.id %}" class="btn btn-sm">
 								View
 							</a>
